--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.30"
     ext.nav_version = '2.3.2'
+//    ext.room_version = "2.2.6"
     ext.hilt_version = '2.31.2-alpha'
     repositories {
         google()
@@ -23,6 +24,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url = "https://kotlin.bintray.com/kotlinx/" }
+        maven { url 'https://maven.google.com' }
     }
 }
 
@@ -31,6 +34,6 @@ task clean(type: Delete) {
 }
 
 ext {
-    room_version = "2.2.6"
+//    room_version = "2.2.6"
     lifecycle_version = "2.2.0"
 }
