--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,10 @@ android {
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = [
-                        "room.incremental":"true",
-                ]
+                arguments["room.incremental"] = "true"
+//                arguments + [
+//                        "room.incremental":"true",
+//                ]
             }
         }
     }
@@ -64,6 +65,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha06'
+//    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
 
 //    implementation "androidx.room:room-runtime:$room_version"
 //    implementation "androidx.room:room-ktx:$room_version"
