--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha06'
+//    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha06'
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-beta01'
 //    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
 
 //    implementation "androidx.room:room-runtime:$room_version"
