--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation "io.coil-kt:coil:0.13.0"
+
 }
