--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,18 +62,24 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 //    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha06'
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-beta01'
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha11'
+//    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-beta01'
 //    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
 
 //    implementation "androidx.room:room-runtime:$room_version"
 //    implementation "androidx.room:room-ktx:$room_version"
 //    kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-runtime:2.3.0-alpha02"
-    implementation "androidx.room:room-ktx:2.3.0-alpha02"
-    kapt "androidx.room:room-compiler:2.3.0-alpha02"
+    implementation "androidx.room:room-runtime:2.3.0-alpha03"
+    implementation "androidx.room:room-ktx:2.3.0-alpha03"
+    kapt "androidx.room:room-compiler:2.3.0-alpha03"
+//    implementation "androidx.room:room-runtime:2.3.0-alpha02"
+//    implementation "androidx.room:room-ktx:2.3.0-alpha02"
+//    kapt "androidx.room:room-compiler:2.3.0-alpha02"
+
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-rc01'
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -91,5 +97,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation "io.coil-kt:coil:0.13.0"
+
+    implementation 'com.google.android.material:material:1.2.1'
 
 }
