--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,20 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            Properties properties = new Properties()
+            properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+            def storeFilePath = properties.getProperty('storeFile')
+            if (storeFilePath) {
+                storeFile file(storeFilePath)
+                storePassword properties.getProperty('storePassword')
+                keyAlias properties.getProperty('keyAlias')
+                keyPassword properties.getProperty('keyPassword')
+            }
+        }
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
@@ -21,11 +35,9 @@ android {
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments["room.incremental"] = "true"
-//                arguments + [
-//                        "room.incremental":"true",
-//                ]
             }
         }
+        signingConfig signingConfigs.release
     }
 
     buildFeatures {
